syntax = "proto3";

package kv;

service Kv {
  rpc Get (GetReq) returns (GetRep);
  rpc Set (SetReq) returns (SetRep);
  rpc Del (DelReq) returns (DelRep);
}

message GetReq {
  bytes key = 1;
}

message GetRep {
  oneof result {
    bytes value = 2;
    string error = 3;
  }
}

message SetReq {
  bytes key = 1;
  bytes value = 2;
}

message SetRep {
  oneof result {
    bool ok = 4;
    string error = 3;
  }
}

message DelReq {
  bytes key = 1;
}

message DelRep {
  oneof result {
    bool ok = 4;
    string error = 3;
  }
}

